--- a/src/components/IntroCard.css
+++ b/src/components/IntroCard.css
@@ -1,7 +1,7 @@
 .flip-card {
     background-color: transparent;
-    width: 300px;
-    height: 300px;
+    width: 275px;
+    height: 275px;
     perspective: 1000px;
   }
   
@@ -15,9 +15,9 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   }
   
-  .flip-card:hover .flip-card-inner {
+  /* .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
-  }
+  } */
   
   .flip-card-front, .flip-card-back {
     position: absolute;
@@ -38,23 +38,27 @@
     transform: rotateY(180deg);
   }
 
-/******************* BOOTSTRAP CSS ********************* */
-/* .intro-card-text{
-    color:white !important;
-    background-color: transparent !important;
-    text-align: center;
+  .card-post-img{
+    width:100%;
+  }
+
+  .card-header-username, .card-header-date{
+    font-size: 10px;
+  }
+  .card-post-title{
+    font-size: 18px;
+    color: purple;
+
+  }
+
+  .card-post-body{
+    font-size: 14px;
+  }
+
+.card-footer-details p{
+  font-size: 10px;
 }
 
-.intro-card {
-    background-color: transparent !important;
-    margin: 22px !important;
-    padding: 22px !important;
+.card-deck-group{
+  /* margin: 4px; */
 }
-.intro-card-deck{
-    background-color: transparent !important;
-    margin-left: 16px;
-    margin-right: 16px;
-}
-  */
-/******************* BOOTSTRAP CSS ********************* */
- 
